# Pineapple-Blog

./: .gitignore  ADR.md  Demand.md  GETTING_STARTED.md  HUGO_EDITOR_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  package.json  pnpm-lock.yaml  start.sh  vite.config.ts
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  main.rs  models.rs  utils.rs
src-tauri/src/engine/: hugo_adapter.rs  mod.rs  traits.rs  zola_adapter.rs
src/components/: EditorStatusBar.vue  EditorToolbar.vue  FrontMatterEditor.vue  MarkdownPreview.vue  MarkdownToolbar.vue  ProjectSettings.vue  ThemeFrontMatterEditor.vue  WysiwygEditor.vue
src/composables/: useEditor.ts  useMarkdownPreview.ts  useProject.ts
src/router/: index.ts
src/stores/: projectStore.ts
src/types/: index.ts
src/utils/: blogTemplates.ts  frontMatter.ts  themeConfig.ts
src/views/: CreateBlogView.vue  EditorView.README.md  EditorView.vue  HomeView.vue  ProjectView.vue
